--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: daharsh4.github.io
+title: daharsh4.github.io.test
 
 # Short description of your site
 description: A virtual proof that I'm awesome
