--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: David A. Harsh
+title: David's portfolio
 
 # Short description of your site
 description: A virtual proof that I'm awesome
@@ -14,9 +14,9 @@ author: David Harsh
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://aka.ms/dharshlinux"
-    - Learn markdown: "https://aka.ms/dharshmstrworld"
-  Author's home: "https://www.instagram.com/daharsh4/"
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
@@ -38,20 +38,20 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "daharsh4@gmail.com"
-  facebook: dah5ek
-  github: daharsh4
-  twitter: daharsh4
+  email: "someone@example.com"
+  facebook: deanattali
+  github: daattali
+  twitter: daattali
   rss: true
 #  reddit: yourname
- linkedin: daharsh4
+#  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-instagram: daharsh4
+#  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-  telephone: +17039661552
+#  telephone: +14159998888
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
