--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: David Harsh
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://aka.ms/dharshmstrworld"
+    - Test Jekyll: "https://aka.ms/dharshmstrworld"
     - Learn markdown: "https://aka.ms/dharshlinux"
   Author's home: "https://aka.ms/dharshmstrworld"
 
