--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ navbar-links:
   About Me: "aboutme"
   Conference Presentations:
     - MSTR World 2017: "https://aka.ms/dharshmstrworld"
-    - Strata 2017: "https://aka.ms/dharshlinux"
+    - Strata 2017: "https://aka.ms/dharshstrata"
   Work Projects:
     - Linux Foundation: "https://aka.ms/dharshlinux"
     - PowerApp Goverance for Government: "https://aka.ms/powergov"
