--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: David Harsh
 navbar-links:
   About Me:
     - Resume: "https://1drv.ms/b/s!AjFcs0P3O9dCggYl24GtFET2o2_n"
-    - Hobbies: "https://daharsh4.github.io/2020-08-09-flake-it-till-you-make-it/"
+    - Hobbies: "https://daharsh4.github.io/2020-08-02-hobbies/"
   Work Projects:
     - Linux Foundation: "https://aka.ms/dharshlinux"
     - PowerApp Goverance for Government: "https://aka.ms/powergov"
