--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ author: David Harsh
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Learning:
+  Learn  :
     - Resume: "https://1drv.ms/b/s!AjFcs0P3O9dCggYl24GtFET2o2_n"
     - Hobbies: "https://daharsh4.github.io/2020-08-02-hobbies/"
-  Building: 
+  Build        : 
     - PowerApp Goverance for Government: "https://aka.ms/powergov"
     - It Investment Tracker: "https://aka.ms/itinvestment"
   Evangelize:
