--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ author: David Harsh
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Learn  :
+  Learning  :
     - Resume: "https://1drv.ms/b/s!AjFcs0P3O9dCggYl24GtFET2o2_n"
     - Hobbies: "https://daharsh4.github.io/2020-08-02-hobbies/"
-  Build        : 
+  Building: 
     - PowerApp Goverance for Government: "https://aka.ms/powergov"
     - It Investment Tracker: "https://aka.ms/itinvestment"
-  Evangelize:
+  Evangelizing:
     - MSTR World 2017: "https://aka.ms/dharshmstrworld"
     - Strata 2017: "https://aka.ms/dharshstrata"
     - Linux Foundation: "https://aka.ms/dharshlinux"
