--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navbar-links:
     - Resume: "https://1drv.ms/b/s!AjFcs0P3O9dCggYl24GtFET2o2_n"
     - Hobbies: "https://daharsh4.github.io/2020-08-02-hobbies/"
   Building: 
-    - PowerApp Goverance for Government: "https://aka.ms/powergov"
+    - PowerApp Goverance for Federal Gov: "https://aka.ms/powergov"
     - It Investment Tracker: "https://aka.ms/itinvestment"
   Evangelizing:
     - MSTR World 2017: "https://aka.ms/dharshmstrworld"
