--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: David Harsh
 navbar-links:
   Learning  :
     - Resume: "https://1drv.ms/b/s!AjFcs0P3O9dCggYl24GtFET2o2_n"
-    - Hobbies: "https://daharsh4.github.io/2020-08-02-hobbies/"
+    - Interests: "https://daharsh4.github.io/2020-08-02-hobbies/"
   Building: 
     - PowerApp Goverance for Federal Gov: "https://aka.ms/powergov"
     - It Investment Tracker: "https://aka.ms/itinvestment"
